<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="56dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:src="@mipmap/fyber_logo" />

        <!--  uid Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/uid_textinputlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:text="@string/uid_sample"
                android:id="@+id/uid_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/uid_api_param" />
        </android.support.design.widget.TextInputLayout>

        <!-- Api Key Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/api_key_textinputlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:text="1c915e3b5d42d05136185030892fbb846c278927"
                android:id="@+id/api_key_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/api_key_api_param"
                 />
        </android.support.design.widget.TextInputLayout>

        <!-- api id Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/api_id_textinputlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:text="@string/app_id_sample"
                android:id="@+id/api_id_editext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/app_id_api_param"
                 />
        </android.support.design.widget.TextInputLayout>

        <!-- pub0 Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/pub0_textinputlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/pub0_editext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pub0_api_param"
                 />
        </android.support.design.widget.TextInputLayout>
        <!-- Signup Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/get_offers_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:padding="12dp"
            android:text="@string/get_offers_param" />

    </LinearLayout>
</ScrollView>